feat(domain): 근무 관리 클래스 Schedule 구현